# docs/swagger.yaml
@@ -9,15 +9,22 @@ definitions:
         type: string
       approved_by:
         type: string
+      article_groups:
+        items:
+          $ref: '#/definitions/dto.ArticleGroup'
+        type: array
       article_id_old:
         type: integer
       article_user:
-        description: Attachments               []*entity.Attachment   `json:"attachments"`
         items:
           $ref: '#/definitions/dto.ArticleUser'
         type: array
       article_uuid:
         type: string
+      attachments:
+        items:
+          $ref: '#/definitions/dto.Attachment'
+        type: array
       breaking_news_at:
         type: string
       canonical_url:
@@ -89,6 +96,8 @@ definitions:
         type: string
       status:
         type: string
+      sub_rubric:
+        $ref: '#/definitions/dto.SubRubric'
       sub_rubric_id:
         type: integer
       summary:
@@ -154,15 +163,22 @@ definitions:
         type: string
       approved_by:
         type: string
+      article_groups:
+        items:
+          $ref: '#/definitions/dto.ArticleGroup'
+        type: array
       article_id_old:
         type: integer
       article_user:
-        description: Attachments               []*Attachment     `json:"attachments"`
         items:
           $ref: '#/definitions/dto.ArticleUser'
         type: array
       article_uuid:
         type: string
+      attachments:
+        items:
+          $ref: '#/definitions/dto.Attachment'
+        type: array
       breaking_news_at:
         type: string
       canonical_url:
@@ -234,6 +250,8 @@ definitions:
         type: string
       status:
         type: string
+      sub_rubric:
+        $ref: '#/definitions/dto.SubRubric'
       sub_rubric_id:
         type: integer
       summary:
@@ -275,6 +293,37 @@ definitions:
       word_count:
         type: integer
       writing_style:
+        type: string
+    type: object
+  dto.ArticleGroup:
+    properties:
+      article:
+        $ref: '#/definitions/dto.Article'
+      article_id:
+        type: integer
+      breaking_news_at:
+        type: string
+      breaking_news_by:
+        type: string
+      created_at:
+        type: string
+      created_by:
+        type: string
+      group:
+        $ref: '#/definitions/dto.Group'
+      group_id:
+        type: integer
+      headline_at:
+        type: string
+      headline_by:
+        type: string
+      id:
+        type: integer
+      sequence_article_group:
+        type: integer
+      updated_at:
+        type: string
+      updated_by:
         type: string
     type: object
   dto.ArticleTagsOld:
@@ -323,6 +372,49 @@ definitions:
       user_id:
         type: integer
     type: object
+  dto.Attachment:
+    properties:
+      articles:
+        items:
+          $ref: '#/definitions/dto.Article'
+        type: array
+      created_at:
+        type: string
+      created_by:
+        type: string
+      deleted_at:
+        type: string
+      deleted_by:
+        type: string
+      description:
+        type: string
+      editor:
+        type: string
+      id:
+        type: integer
+      is_video:
+        type: boolean
+      link:
+        type: string
+      name:
+        type: string
+      published_at:
+        type: string
+      published_by:
+        type: string
+      title:
+        type: string
+      updated_at:
+        type: string
+      updated_by:
+        type: string
+      uuid:
+        type: string
+      video_source:
+        type: string
+      video_target:
+        type: string
+    type: object
   dto.AuthRequestDto:
     properties:
       email:
@@ -334,6 +426,71 @@ definitions:
     required:
     - email
     - password
+    type: object
+  dto.Group:
+    properties:
+      alias:
+        type: string
+      article_groups:
+        items:
+          $ref: '#/definitions/dto.ArticleGroup'
+        type: array
+      articles:
+        items:
+          $ref: '#/definitions/dto.Article'
+        type: array
+      caption:
+        type: string
+      category:
+        type: string
+      cover:
+        type: string
+      created_at:
+        type: string
+      created_by:
+        type: string
+      date:
+        type: string
+      deleted_at:
+        type: string
+      deleted_by:
+        type: string
+      description:
+        type: string
+      groups_child:
+        items:
+          $ref: '#/definitions/dto.Group'
+        type: array
+      id:
+        type: integer
+      is_active:
+        type: boolean
+      level:
+        type: integer
+      meta_keyword:
+        type: string
+      meta_title:
+        type: string
+      parent_id:
+        type: integer
+      published_at:
+        type: string
+      published_by:
+        type: string
+      sequence:
+        type: integer
+      status:
+        type: string
+      unpublished_at:
+        type: string
+      unpublished_by:
+        type: string
+      updated_at:
+        type: string
+      updated_by:
+        type: string
+      uuid:
+        type: string
     type: object
   dto.PaginationResponseDtoExample:
     properties:
@@ -350,6 +507,66 @@ definitions:
         type: integer
       total_page:
         type: integer
+    type: object
+  dto.Rubric:
+    properties:
+      alias:
+        type: string
+      created_at:
+        type: string
+      created_by:
+        type: string
+      deleted_at:
+        type: string
+      deleted_by:
+        type: string
+      id:
+        type: integer
+      is_active:
+        type: boolean
+      is_main:
+        type: boolean
+      name:
+        type: string
+      sub_rubric:
+        items:
+          $ref: '#/definitions/dto.SubRubric'
+        type: array
+      updated_at:
+        type: string
+      updated_by:
+        type: string
+    type: object
+  dto.SubRubric:
+    properties:
+      alias:
+        type: string
+      articles:
+        items:
+          $ref: '#/definitions/dto.Article'
+        type: array
+      created_at:
+        type: string
+      created_by:
+        type: string
+      deleted_at:
+        type: string
+      deleted_by:
+        type: string
+      id:
+        type: integer
+      is_active:
+        type: boolean
+      name:
+        type: string
+      rubric:
+        $ref: '#/definitions/dto.Rubric'
+      rubric_id:
+        type: integer
+      updated_at:
+        type: string
+      updated_by:
+        type: string
     type: object
   dto.User:
     properties:
@@ -443,10 +660,10 @@ definitions:
     type: object
 info:
   contact: {}
-  title: SuperCMS documentation API
+  title: Go Pustaka API Documentation
   version: "3.0"
 paths:
-  /articles:
+  /client/articles:
     get:
       parameters:
       - example: 10
@@ -473,6 +690,58 @@ paths:
       summary: Get All Article
       tags:
       - Article
+  /client/articles/{id}:
+    get:
+      parameters:
+      - description: Article ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.ArticleDetailResponse'
+              type: object
+      security:
+      - XApiKey: []
+      - XTempoToken: []
+      - XRequestTime: []
+      summary: Get Article Details
+      tags:
+      - Article
+  /newsroom/articles:
+    get:
+      parameters:
+      - example: 10
+        in: query
+        name: limit
+        required: true
+        type: integer
+      - example: 1
+        in: query
+        name: page
+        type: integer
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.PaginationResponseDtoExample'
+              type: object
+      security:
+      - BearerAuth: []
+      summary: Get All Article
+      tags:
+      - CMS - Article
     post:
       parameters:
       - description: Article payload
@@ -495,8 +764,8 @@ paths:
       - BearerAuth: []
       summary: Create Article
       tags:
-      - Article
-  /articles/{id}:
+      - CMS - Article
+  /newsroom/articles/{id}:
     delete:
       parameters:
       - description: Article ID
@@ -518,7 +787,7 @@ paths:
       - BearerAuth: []
       summary: Delete Article
       tags:
-      - Article
+      - CMS - Article
     get:
       parameters:
       - description: Article ID
@@ -540,7 +809,7 @@ paths:
       - BearerAuth: []
       summary: Get Article Details
       tags:
-      - Article
+      - CMS - Article
     patch:
       parameters:
       - description: Article ID
@@ -568,8 +837,8 @@ paths:
       - BearerAuth: []
       summary: Update Article
       tags:
-      - Article
-  /auth/info:
+      - CMS - Article
+  /newsroom/auth/info:
     get:
       responses:
         "200":
@@ -583,8 +852,8 @@ paths:
               type: object
       summary: Auth Info
       tags:
-      - Auth
-  /auth/login:
+      - CMS - Auth
+  /newsroom/auth/login:
     post:
       parameters:
       - description: Auth payload
@@ -605,5 +874,18 @@ paths:
               type: object
       summary: Auth Login
       tags:
-      - Auth
+      - CMS - Auth
+securityDefinitions:
+  XApiKey:
+    in: header
+    name: X-Api-Key
+    type: apiKey
+  XRequestTime:
+    in: header
+    name: X-Request-Time
+    type: apiKey
+  XTempoToken:
+    in: header
+    name: X-Tempo-Token
+    type: apiKey
 swagger: "2.0"
