# internal/handler/article.go
@@ -23,11 +23,13 @@ func NewArticleHandler(db *gorm.DB) ArticleHandler {
 }
 
 // @Tags		Article
-// @Security	BearerAuth
+// @Security	XApiKey
+// @Security	XTempoToken
+// @Security	XRequestTime
 // @Summary	Get Article Details
 // @Param		id	path		int	true	"Article ID"
 // @Success	200	{object}	helper.Response{data=dto.ArticleDetailResponse}
-// @Router		/articles/{id} [get]
+// @Router		/client/articles/{id} [get]
 func (h ArticleHandler) GetByID(c *gin.Context) {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
@@ -47,7 +49,7 @@ func (h ArticleHandler) GetByID(c *gin.Context) {
 // @Summary	Get All Article
 // @Param		request	query		dto.PaginationRequestDto	true	"Query Params"
 // @Success	200		{object}	helper.Response{data=dto.PaginationResponseDtoExample}
-// @Router		/articles [get]
+// @Router		/client/articles [get]
 func (h ArticleHandler) GetAll(c *gin.Context) {
 	var payload dto.PaginationRequestDto
 	if err := c.Bind(&payload); err != nil {
@@ -64,75 +66,4 @@ func (h ArticleHandler) GetAll(c *gin.Context) {
 		return
 	}
 	helper.ResSuccess(c, data)
-}
-
-// @Tags		Article
-// @Security	BearerAuth
-// @Summary	Create Article
-// @Param		request	body		dto.ArticleCreateRequestDto	true	"Article payload"
-// @Success	200		{object}	helper.Response{data=string}
-// @Router		/articles [post]
-func (h ArticleHandler) Create(c *gin.Context) {
-	var payload dto.ArticleCreateRequestDto
-	if err := c.Bind(&payload); err != nil {
-		helper.ResErr(c, 400, err.Error())
-		return
-	}
-	if err := helper.ValidateRequest(payload); err != nil {
-		helper.ResErr(c, 400, err.Error())
-		return
-	}
-	if err := h.articleSvc.Create(payload); err != nil {
-		helper.ResErr(c, 400, err.Error())
-		return
-	}
-	helper.ResSuccess(c, "ok")
-}
-
-// @Tags		Article
-// @Security	BearerAuth
-// @Summary	Update Article
-// @Param		id		path		int							true	"Article ID"
-// @Param		request	body		dto.ArticleUpdateRequestDto	true	"Article payload"
-// @Success	200		{object}	helper.Response{data=string}
-// @Router		/articles/{id} [patch]
-func (h ArticleHandler) Update(c *gin.Context) {
-	id, err := strconv.Atoi(c.Param("id"))
-	if err != nil {
-		helper.ResErr(c, 400, err.Error())
-		return
-	}
-	var payload dto.ArticleUpdateRequestDto
-	if err := c.Bind(&payload); err != nil {
-		helper.ResErr(c, 400, err.Error())
-		return
-	}
-	if err := helper.ValidateRequest(payload); err != nil {
-		helper.ResErr(c, 400, err.Error())
-		return
-	}
-	if err := h.articleSvc.Update(int64(id), payload); err != nil {
-		helper.ResErr(c, 400, err.Error())
-		return
-	}
-	helper.ResSuccess(c, "ok")
-}
-
-// @Tags		Article
-// @Security	BearerAuth
-// @Summary	Delete Article
-// @Param		id	path		int	true	"Article ID"
-// @Success	200	{object}	helper.Response{data=string}
-// @Router		/articles/{id} [delete]
-func (h ArticleHandler) Delete(c *gin.Context) {
-	id, err := strconv.Atoi(c.Param("id"))
-	if err != nil {
-		helper.ResErr(c, 400, err.Error())
-		return
-	}
-	if err := h.articleSvc.Delete(int64(id)); err != nil {
-		helper.ResErr(c, 400, err.Error())
-		return
-	}
-	helper.ResSuccess(c, "ok")
 }
